--- a/singolo2.html
+++ b/singolo2.html
@@ -35,5 +35,49 @@
         </div>
     </section>
     <div class="color3"></div>
+    <section class="about_us">
+        <h2>About Us</h2>
+        <p id="p_us">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum hibh.</p>
+<div class="people">
+        <div class="person">
+        <img class="person_img" src="./assets/Fwoman.png">
+        <h4>Adam Jensen</h4>
+        <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem</p>
+        <ul class="media">
+            <li><a href="#"><img src="./assets/Facebook.png"></a></li>
+            <li><a href="#"><img src="./assets/Google.png"></a></li>
+            <li><a href="#"><img src="./assets/Twitter.png"></a></li>
+            <li><a href="#"><img src="./assets/LinkedIn.png"></a></li>
+        </ul>
+   
+</div>
+<div class="person">
+    <img class="person_img" src="./assets/men.png">
+    <h4>Desmond Miles</h4>
+    <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+    <ul class="media">
+        <li><a href="#"><img src="./assets/Facebook.png"></a></li>
+        <li><a href="#"><img src="./assets/Google.png"></a></li>
+        <li><a href="#"><img src="./assets/Twitter.png"></a></li>
+        <li><a href="#"><img src="./assets/LinkedIn.png"></a></li>
+    </ul>
+
+</div>
+<div class="person">
+    <img class="person_img" src="./assets/Twomen.png">
+    <h4>Scolara Visari</h4>
+    <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+    <ul class="media">
+        <li><a href="#"><img src="./assets/Facebook.png"></a></li>
+        <li><a href="#"><img src="./assets/Google.png"></a></li>
+        <li><a href="#"><img src="./assets/Twitter.png"></a></li>
+        <li><a href="#"><img src="./assets/LinkedIn.png"></a></li>
+    </ul>
+
+</div>
+</div>
+
+    </section>
+    <div class="color4"></div>
 </body>
 </html>
