--- a/singolo1.html
+++ b/singolo1.html
@@ -27,7 +27,7 @@
 
 <section class="slider">
     <div class="iPhone">
-        <img src="./assets//img/iPhone Vertical.jpg" alt="iPhone" id="vertical">
+        <img src="./assets//img/iPhone Vertical.png" alt="iPhone" id="vertical">
     </div>
     <div class="iPhone">
         <img src="./assets/img/iPhone Horizontal.png" alt="iPhone" id="horizontal">
@@ -72,7 +72,7 @@
             <div class="block">
             <img src="./assets/img/Bubble.png" alt="Bubble">
             <div class="text">
-            <h4>24/7 Support</h4>
+            <h4>24 / 7 Support</h4>
             <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem.</p>
             </div>
             </div>
