--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="first">
         <header id="header">
             <div class="logo">
-            <h1><a href="#">SINGOLO<span style ="color: rgb(144,147,157)">*</span></a></h1>
+            <h1><a href="#">SINGOLO<span style ="color: #F06C64">*</span></a></h1>
             </div>
     <nav class ="header_navigation">
         <ul class="navigation">
