--- a/index.html
+++ b/index.html
@@ -119,18 +119,18 @@
                 </ul> 
             </nav>
             <div id="image">
-                <div><img class="picture" src="./assets/ship.png"></div>
-                <div><img class="picture" src="./assets/girl.png"></div>
-                <div><img class="picture" src="./assets/black_white.png"></div>
-                <div><img class="picture" src="./assets/Robo.png"></div>
-                <div><img class="picture" src="./assets/party.png"></div>
-                <div><img class="picture" src="./assets/SDK.png"></div>
-                <div><img class="picture" src="./assets/rbo.png"></div>
-                <div><img class="picture" src="./assets/bird.png"></div>
-                <div><img class="picture" src="./assets/green_monster.png"></div>
-                <div><img class="picture" src="./assets/words.png"></div>
-                <div><img class="picture" src="./assets/monster.png"></div>
-                <div><img class="picture" src="./assets/Images.png"></div>
+                <img class="picture" src="./assets/ship.png">
+                <img class="picture" src="./assets/girl.png">
+                <img class="picture" src="./assets/black_white.png">
+                <img class="picture" src="./assets/Robo.png">
+                <img class="picture" src="./assets/party.png">
+                <img class="picture" src="./assets/SDK.png">
+                <img class="picture" src="./assets/rbo.png">
+                <img class="picture" src="./assets/bird.png">
+                <img class="picture dispNone" src="./assets/green_monster.png">
+                <img class="picture dispNone" src="./assets/words.png">
+                <img class="picture dispNone" src="./assets/monster.png">
+                <img class="picture dispNone" src="./assets/Images.png">
             </div>
         </section>
         <div class="color3"></div>
@@ -193,7 +193,7 @@
                     <input class="form_elem" type="email" name="email" placeholder="Email" required>
                     <input class="form_elem" type="text" id="subject" name="subject" placeholder="Subject">
                     <textarea class="form_elem" name="comment" id="describe" placeholder="Describe your project in detail"></textarea>
-                    <input class="form_elem" id="submit" type="submit" name="button" value="Submit">
+                    <input class="form_elem" id="submit" type="submit" name="button" value="SEND">
                 </form>
                 <section class="contact_inf">
                     <h4>Contact Information</h4>
@@ -211,7 +211,7 @@
                 </section>
             </section>
         </section>
-        <div class="color2"></div>
+        <div class="color5"></div>
         <footer>
             <p>© Copyright 2013</p>
             <ul>
